trunk/Archive2/1a/ecdaae99eae451/output
main.cpp:2:3: error: ‘gr_funcdecl’ does not name a type
   gr_funcdecl =  gr_returntype // Return type
   ^
main.cpp:11:3: error: ‘gr_funcdecl’ does not name a type
   gr_funcdecl =  gr_returntype // Return type
   ^
